2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-11-02  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : Merge in Calum's new layout
	* gnome-accessibility-keyboard-properties.glade : ditto.

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-11  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>

	* gnome-accessibility-keyboard-properties.c (xkb_enabled): Dismiss
	the XKB extensions warning dialog.  Fixes #95069

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-09-26  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade : add ellipsis for CDE
	 import and Repeat key buttons.

2002-09-25  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade : remove spaces before
	  colons and fix the title.

2002-09-24  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c (load_CDE_file) : blah the
	  XrmGetFileDatabase is implementation specific in its handling of
	  invalid files.  Add a hack that if the imported file did not contain
	  any resources it was invalid.

	* gnome-accessibility-keyboard-properties.glade : add mnemonic_widget
	  for mousekeys_init_delay_title.  Remove the atkrelations for things
	  with mnemonic_widget.

2002-09-11  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade : Fix conflicting
	  accelerators.

	* accessibility-keyboard.c (setup_dialog) : connect the simple items
	  before the master.
	(cb_master_enable_toggle) : desensitize the subfeature content if the
	  master switch is disabled.

2002-09-09  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.c (main) : add a warning if
	  xkb is not available.

2002-09-09  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : on 2nd thought lets disable the 'beep on
	  feature change' if the master switch is off.

	http://bugzilla.gnome.org/show_bug.cgi?id=92488