@@ -91,11 +91,11 @@ static struct {
 	{ "slowkeys_delay_slide",	"slowkeys_delay_spin",	     300,  10,  500,   10,
 	  CONFIG_ROOT "/slowkeys_delay" },
 	  /* WARNING anything larger than approx 512 seems to loose all keyboard input */
-	{ "mousekeys_max_speed_slide",	"mousekeys_max_speed_spin",  300,  10, 500,   20,
+	{ "mousekeys_max_speed_slide",	"mousekeys_max_speed_spin",  300,  10, 500,   10,
 	  CONFIG_ROOT "/mousekeys_max_speed" },
-	{ "mousekeys_accel_time_slide",	"mousekeys_accel_time_spin", 300,  10, 3000,  100,
+	{ "mousekeys_accel_time_slide",	"mousekeys_accel_time_spin", 300,  10, 3000,  10,
 	  CONFIG_ROOT "/mousekeys_accel_time" },
-	{ "mousekeys_init_delay_slide",	"mousekeys_init_delay_spin", 300,  10, 5000,  100,
+	{ "mousekeys_init_delay_slide",	"mousekeys_init_delay_spin", 300,  10, 5000,  10,
 	  CONFIG_ROOT "/mousekeys_init_delay" },
 	{ "timeout_slide",	"timeout_spin",			     200,  10,  500,   10,
 	  CONFIG_ROOT "/timeout" },
