@@ -1,3 +1,8 @@
+2002-11-13  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
+
+	* accessibility-keyboard.c : Tweaked the incremental values
+	of spin button to 10. Fixes #95511
+
 2002-11-02  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.2
